[package]
name = "job-manager"
version = "0.1.0"
edition = "2021"
description = "This crate provides the ability to run background jobs on a schedule."
license = "MIT-0"

[dependencies]
async-trait = "0.1.83"
anyhow = "1.0.94"
chrono = "0.4.37"
cassandra-cpp = "3.0.2"
cron = { version = "0.12.0"}
serde = { version = "1.0", features = ["derive"] }
hostname = "0.3"
gethostname = "0.3"
log = "0.4.25"
derive_more = "0.99"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

#[[example]]
#name = "job"

[[bin]]
name = "job"
path = "examples/job/main.rs"
